# bride

./: Cargo.toml  rustfmt.toml
src/: main.rs  utils.rs
src/screen/: mod.rs
src/screen/panels/: colors.rs  console.rs  header.rs  mod.rs  patterns.rs  preview.rs  project.rs  sections.rs
src/server/: mod.rs  queue.rs
src/shell/: mod.rs
